assets/mysql-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-mysql
    labels:
        app: my-mysql
spec:
    selector:
        matchLabels:
            app: my-mysql
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: my-mysql
        spec:
            containers:
                - image: mysql:5.7
                  name: my-mysql
                  args:
                      - "--ignore-db-dir=lost+found"
                  ports:
                      - containerPort: 3306
                        name: mysql
                  volumeMounts:
                      - name: mysql-persistent-storage
                        mountPath: /var/lib/mysql
            volumes:
                - name: mysql-persistent-storage
                  persistentVolumeClaim:
                      claimName: my-mysql
