assets/default-backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: default-http-backend
    labels:
        app: default-http-backend
    namespace: ingress-nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            app: default-http-backend
    template:
        metadata:
            labels:
                app: default-http-backend
        spec:
            terminationGracePeriodSeconds: 60
            containers:
                - name: default-http-backend
                    # Any image is permissible as long as:
                    # 1. It serves a 404 page at /
                    # 2. It serves 200 on a /healthz endpoint
#                  image: gcr.io/google_containers/defaultbackend:1.4
                  image: registry.cn-hangzhou.aliyuncs.com/google_containers/defaultbackend:1.4
                  livenessProbe:
                      httpGet:
                          path: /healthz
                          port: 8080
                          scheme: HTTP
                      initialDelaySeconds: 30
                      timeoutSeconds: 5
                  ports:
                      - containerPort: 8080
                  resources:
                      limits:
                          cpu: 10m
                          memory: 20Mi
                      requests:
                          cpu: 10m
                          memory: 20Mi
---

apiVersion: v1
kind: Service
metadata:
    name: default-http-backend
    namespace: ingress-nginx
    labels:
        app: default-http-backend
spec:
    ports:
        - port: 80
          targetPort: 8080
    selector:
        app: default-http-backend
