assets/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
    namespace: "bupt-graduation-design"
    name: my-mysql
    labels:
        app: my-mysql
spec:
    type: NodePort
#    type: LoadBalancer
    ports:
        - port: 3306
          nodePort: 32311
    selector:
        app: my-mysql
