assets/svc-ingress-nginx.yaml
apiVersion: v1
kind: Service
metadata:
    name: ingress-nginx
    namespace: ingress-nginx
    labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
spec:
    type: NodePort
    ports:
        - name: http
#          port: 80
          port: 30080
          targetPort: 80
          nodePort: 30080
          protocol: TCP
        - name: https
#          port: 443
          port: 30443
          nodePort: 30443
          targetPort: 443
          protocol: TCP
    selector:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
