assets/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: bupt-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - https:
              paths:
                  - path: /kubernetes-dashboard
                    backend:
                        serviceName: kubernetes-dashboard
                        servicePort: 443
                  - path: /api/user
                    backend:
                        serviceName: user
                        servicePort: 8080
