assets/k8s-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: kubernetes-dashboard
    namespace: kube-system
#    annotations:
#        nginx.ingress.kubernetes.io/ssl-redirect: "false"
#        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
    rules:
        - host: k8s.debugya.cn
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: kubernetes-dashboard
                        servicePort: 443
