assets/user-debugya-cn.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: user-debugya-cn
    namespace: bupt-graduation-design
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: $2/
spec:
    rules:
        - host: user.debugya.cn(/|$)(.*)
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: user
                        servicePort: 8080
