assets/user-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: user-ingress
    namespace: bupt-graduation-design
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - host: www.debugya.cn
          http:
              paths:
                  - path: /user
                    backend:
                        serviceName: user
                        servicePort: 8080
